begin 2.4.2 backport